WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27139
Fix chromium platform build bustage
https://bugs.webkit.org/show_bug.cgi?id=27139
Summary
Fix chromium platform build bustage
Michael Nordman
Reported
2009-07-09 17:37:40 PDT
Widget is now refcounted, so our derived classes that added refcounted needs fixing.
Attachments
Fix compile errors
(1.91 KB, patch)
2009-07-09 17:43 PDT
,
Michael Nordman
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Nordman
Comment 1
2009-07-09 17:43:44 PDT
Created
attachment 32543
[details]
Fix compile errors
Dmitry Titov
Comment 2
2009-07-09 17:56:48 PDT
Landed:
http://trac.webkit.org/changeset/45685
Michael Nordman
Comment 3
2009-07-09 19:35:13 PDT
Thank for landing dimitry. This also ripples into our "glue" layer, still recovering from that.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug