2009-07-09  Michael Nordman  <michaeln@google.com>

Reviewed by Darin Adler.

        Fix chromium build bustage due to Widget being a RefCounted class.
        https://bugs.webkit.org/show_bug.cgi?id=27139

        * platform/chromium/PopupMenuChromium.cpp:
        * platform/chromium/PopupMenuChromium.h:

Canonical link: https://commits.webkit.org/37338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45685 268f45cc-cd09-0410-ab3c-d52691b4dbfc