WebCore/platform/chromium/PopupMenuChromium.h
@@ -89,7 +89,7 @@ namespace WebCore {
         bool loopSelectionNavigation;
     };
 
-    class PopupContainer : public FramelessScrollView, public RefCounted<PopupContainer>  {
+    class PopupContainer : public FramelessScrollView {
     public:
         static PassRefPtr<PopupContainer> create(PopupMenuClient*,
                                                  const PopupContainerSettings&);
